--- a/frontend/admin/index.html
+++ b/frontend/admin/index.html
@@ -11,7 +11,7 @@
       sizes="512x512"
     />
 
-    <title>Admin Dashboard - RSMS</title>
+    <title>Admin Dashboard - Admin DIKLAT RSMS</title>
 
     <link
       href="../assets/vendor/bootstrap/css/bootstrap.min.css"
