--- a/frontend/admin/institusipelatihan.html
+++ b/frontend/admin/institusipelatihan.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
 
-    <title>Admin - Institusi Pelatihan</title>
+    <title>Institusi Pelatihan - Admin DIKLAT RSMS</title>
 
     <link
       rel="icon"
