--- a/frontend/admin/sertifikat.html
+++ b/frontend/admin/sertifikat.html
@@ -2,7 +2,7 @@
 <html lang="id">
   <head>
     <meta charset="UTF-8" />
-    <title>Admin - Sertifikat Akreditasi</title>
+    <title>Sertifikat Akreditasi - Admin DIKLAT RSMS</title>
 
     <link
       rel="icon"
