--- a/frontend/admin/timkerja.html
+++ b/frontend/admin/timkerja.html
@@ -2,7 +2,7 @@
 <html lang="id">
   <head>
     <meta charset="UTF-8" />
-    <title>Admin - Tim Kerja</title>
+    <title>Tim Kerja - Admin DIKLAT RSMS</title>
 
     <link
       rel="icon"
