--- a/frontend/admin/admin.html
+++ b/frontend/admin/admin.html
@@ -10,7 +10,7 @@
       sizes="512x512"
     />
 
-    <title>Admin - Kelola User Admin</title>
+    <title>Kelola User Admin - Admin DIKLAT RSMS</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
