--- a/frontend/admin/historiakreditasi.html
+++ b/frontend/admin/historiakreditasi.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
 
-    <title>Admin - Histori Akreditasi</title>
+    <title>Histori Akreditasi - Admin DIKLAT RSMS</title>
 
     <link
       rel="icon"
@@ -15,8 +15,6 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
       rel="stylesheet"
     />
-
-    <title>Admin - Fasilitator</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
