--- a/frontend/admin/kritiksaran.html
+++ b/frontend/admin/kritiksaran.html
@@ -10,7 +10,7 @@
       type="image/png"
     />
 
-    <title>Admin - Kritik & Saran</title>
+    <title>Kritik & Saran - Admin DIKLAT RSMS</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
