--- a/frontend/admin/logadmin.html
+++ b/frontend/admin/logadmin.html
@@ -10,7 +10,7 @@
       type="image/png"
     />
 
-    <title>Admin - Log Aktivitas</title>
+    <title>Log Aktivitas - Admin DIKLAT RSMS</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
