--- a/frontend/admin/logemail.html
+++ b/frontend/admin/logemail.html
@@ -9,7 +9,7 @@
       type="image/png"
     />
 
-    <title>Admin - Log Email</title>
+    <title>Log Email - Admin DIKLAT RSMS</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
