--- a/frontend/admin/pembayaran.html
+++ b/frontend/admin/pembayaran.html
@@ -11,7 +11,7 @@
       sizes="512x512"
     />
 
-    <title>Admin - Pembayaran Peserta</title>
+    <title>Pembayaran Peserta - Admin DIKLAT RSMS</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
