--- a/frontend/admin/penyelenggara.html
+++ b/frontend/admin/penyelenggara.html
@@ -11,7 +11,7 @@
       sizes="512x512"
     />
 
-    <title>Admin - Penyelenggara</title>
+    <title>Penyelenggara - Admin DIKLAT RSMS</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
