--- a/frontend/admin/strukturorganisasi.html
+++ b/frontend/admin/strukturorganisasi.html
@@ -9,7 +9,7 @@
       type="image/png"
     />
 
-    <title>Admin - Struktur Organisasi DIKLAT</title>
+    <title>Struktur Organisasi DIKLAT - Admin DIKLAT RSMS</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
@@ -211,7 +211,7 @@
     <!-- ================= END NAVBAR ================= -->
 
     <div class="container py-4">
-      <h2 class="fw-bold mb-4">🏢 Struktur Organisasi DIKLAT</h2>
+      <h2 class="fw-bold mb-4">🏢 Struktur Organisasi</h2>
 
       <div class="card">
         <div
@@ -219,7 +219,7 @@
         >
           <span>Struktur Organisasi</span>
           <button
-            class="btn btn-success btn-sm"
+            class="btn btn-primary btn-sm"
             data-bs-toggle="modal"
             data-bs-target="#modalKelolaStruktur"
           >
@@ -285,41 +285,74 @@
         const container = document.getElementById("orgContainer");
         container.innerHTML = "";
 
-        const groupByLevel = {};
-        data.forEach((item) => {
-          if (!groupByLevel[item.level_jabatan]) {
-            groupByLevel[item.level_jabatan] = [];
-          }
-          groupByLevel[item.level_jabatan].push(item);
-        });
+        const root = data.find((d) => d.level_jabatan === 1);
+        const level2 = data.filter((d) => d.level_jabatan === 2);
+        const level3 = data.filter((d) => d.level_jabatan === 3);
 
-        Object.keys(groupByLevel)
-          .sort((a, b) => a - b)
-          .forEach((level) => {
-            const levelDiv = document.createElement("div");
-            levelDiv.className = "org-level";
+        const pendidikan = level2.find((d) =>
+          d.nama_jabatan.toLowerCase().includes("pendidikan"),
+        );
 
-            groupByLevel[level].forEach((node) => {
-              const card = document.createElement("div");
-              card.className = "org-card";
+        const pelatihan = level2.find((d) =>
+          d.nama_jabatan.toLowerCase().includes("pelatihan"),
+        );
 
-              card.innerHTML = `
-          ${node.parent_id ? '<div class="line-command"></div>' : ""}
-          <img src="${
-            node.foto
-              ? "http://localhost:5000/uploads/anggota/" + node.foto
-              : "http://localhost:5000/uploads/default-user.JPG"
-          }"
-          class="org-foto">
-          <div class="org-name">${node.nama_lengkap ?? "-"}</div>
-          <div class="org-jabatan">${node.nama_jabatan}</div>
+        container.innerHTML = `
+        <div class="org-root">
+          ${createCard(root)}
+        </div>
+
+        <div class="org-connector"></div>
+
+        <div class="org-level2">
+          <!-- ===== PENDIDIKAN ===== -->
+            <div class="org-branch">
+              ${createCard(pendidikan)}
+              
+              <div class="org-children-wrapper">
+                <div class="org-children-line"></div>
+                <div class="org-children">
+                  ${level3
+                    .filter(l3 => l3.parent_id === pendidikan?.id_jabatan)
+                    .map(createCard)
+                    .join("")}
+                </div>
+              </div>
+            </div>
+
+            <!-- ===== PELATIHAN ===== -->
+            <div class="org-branch">
+              ${createCard(pelatihan)}
+              
+              <div class="org-children-wrapper">
+                <div class="org-children-line"></div>
+                <div class="org-children">
+                  ${level3
+                    .filter(l3 => l3.parent_id === pelatihan?.id_jabatan)
+                    .map(createCard)
+                    .join("")}
+                </div>
+              </div>
+            </div>
+
+          </div>
         `;
+      }
 
-              levelDiv.appendChild(card);
-            });
+      function createCard(node) {
+        if (!node) return "";
 
-            container.appendChild(levelDiv);
-          });
+        return `
+          <div class="org-card">
+            <img src="${
+              node.foto
+                ? "http://localhost:5000/uploads/anggota/" + node.foto
+                : "http://localhost:5000/uploads/default-user.JPG"
+            }">
+            <div class="org-name">${node.nama_lengkap ?? "-"}</div>
+            <div class="org-jabatan">${node.nama_jabatan}</div>
+          </div>
+        `;
       }
 
       /* ================= LOAD DROPDOWN ================= */
