--- a/frontend/alurpendaftaran.html
+++ b/frontend/alurpendaftaran.html
@@ -341,9 +341,72 @@
     </main>
 
     <!-- ======= FOOTER ======= -->
-    <footer id="footer" class="footer position-relative light-background">
-      <!-- FOOTER TIDAK DIUBAH -->
-    </footer>
+    <footer id="footer" class="footer position-relative light-background mt-5">
+
+    <div class="container footer-top">
+      <div class="row gy-4">
+        <div class="col-lg-4 col-md-6 footer-about">
+          <a href="index.html" class="logo d-flex align-items-center">
+            <span class="sitename">DIKLAT RSMS</span>
+          </a>
+          <div class="footer-contact pt-3">
+            <p>Jl. Dr. Gumbreg No.1, Kebontebu, Berkoh, </p>
+            <p>Kec. Purwokerto Sel., Kabupaten Banyumas,</p>
+            <p>Jawa Tengah 53146</p>
+            <p class="mt-3"><strong>Phone:</strong> <span>(0281) 632704</span></p>
+            <p><strong>Email:</strong> <span>rsmargono@jatengprov.go.id</span></p>
+          </div>
+          <div class="social-links d-flex mt-4">
+            <a href="https://x.com/rsudmargono"><i class="bi bi-twitter-x"></i></a>
+            <a href="https://www.facebook.com/RSMargono/"><i class="bi bi-facebook"></i></a>
+            <a href="https://www.instagram.com/rsudmargono/"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.youtube.com/@rsmargono"><i class="bi bi-youtube"></i></a>
+          </div>
+        </div>
+
+        <div class="col-lg-2 col-md-3 footer-links">
+          <h4>Useful Links</h4>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="contact.html">Kontak</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+          </ul>
+        </div>
+
+        <div class="col-lg-2 col-md-3 footer-links">
+          <h4>Pelatihan</h4>
+          <ul>
+            <li><a href="menupelatihan.html">Menu Pelatihan</a></li>
+            <li><a href="daftarpelatihan.html">Daftar Pelatihan</a></li>
+            <li><a href="kalender.html">Kalender Pelatihan</a></li>
+            <li><a href="alurpendaftaran.html">Alur Pendaftaran</a></li>
+          </ul>
+        </div>
+
+        <div class="col-lg-4 col-md-3 footer-links">
+          <h4>Tim & Mitra Pelatihan</h4>
+          <ul>
+            <li><a href="fasilitator.html">Profesional Fasilitor dan Instruktur</a></li>
+            <li><a href="penyelenggara.html">Tim Penyelenggara Pelatihan</a></li>
+            <li><a href="instruktur.html">Institusi Kerjasama</a></li>
+          </ul>
+        </div>
+
+      </div>
+    </div>
+
+    <div class="container copyright text-center mt-4">
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">RSUD Prof. Dr. Margono Soekarjo</strong></p>
+      <div class="credits">
+        <!-- All the links in the footer should remain intact. -->
+        <!-- You can delete the links only if you've purchased the pro version. -->
+        <!-- Licensing information: https://bootstrapmade.com/license/ -->
+        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
+        <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
+      </div>
+    </div>
+
+  </footer>
 
     <!-- UTILITIES -->
     <a
