--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -329,7 +329,7 @@
     </main>
 
     <!-- ======= FOOTER ======= -->
-    <footer id="footer" class="footer position-relative light-background">
+    <footer id="footer" class="footer position-relative light-background mt-5">
       <div class="container footer-top">
         <div class="row gy-4">
           <div class="col-lg-4 col-md-6 footer-about">
