--- a/frontend/gallery.html
+++ b/frontend/gallery.html
@@ -336,7 +336,7 @@
       <!-- Modal ZOOM Foto -->
     </main>
 
-    <footer id="footer" class="footer position-relative light-background">
+    <footer id="footer" class="footer position-relative light-background mt-5">
       <div class="container footer-top">
         <div class="row gy-4">
           <div class="col-lg-4 col-md-6 footer-about">
