--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1232,7 +1232,7 @@
       </section>
     </main>
 
-  <footer id="footer" class="footer position-relative light-background">
+  <footer id="footer" class="footer position-relative light-background mt-5">
 
     <div class="container footer-top">
       <div class="row gy-4">
