--- a/frontend/kritiksaran.html
+++ b/frontend/kritiksaran.html
@@ -265,7 +265,7 @@
   </main>
 
   <!-- ======= FOOTER ======= -->
-  <footer id="footer" class="footer position-relative light-background">
+  <footer id="footer" class="footer position-relative light-background mt-5">
 
     <div class="container footer-top">
       <div class="row gy-4">
