--- a/frontend/penyelenggara.html
+++ b/frontend/penyelenggara.html
@@ -342,7 +342,7 @@
 
   </main>
 
-  <footer id="footer" class="footer position-relative light-background">
+  <footer id="footer" class="footer position-relative light-background mt-5">
 
     <div class="container footer-top">
       <div class="row gy-4">
