--- a/frontend/admin/jabatan.html
+++ b/frontend/admin/jabatan.html
@@ -465,6 +465,13 @@
                             title="Edit">
                       <i class="bi bi-pencil-square fs-5"></i>
                     </button>
+
+                    <button class="btn btn-sm text-danger p-0"
+                        onclick="hapusJabatan(${item.id_jabatan})"
+                        data-bs-toggle="tooltip"
+                        title="Hapus">
+                  <i class="bi bi-trash fs-5"></i>
+                </button>
             </tr>
           `;
         });
@@ -582,6 +589,26 @@
         ).hide();
 
         loadJabatan();
+      };
+
+      // ================= DELETE =================
+      window.hapusJabatan = async (id) => {
+        if (!confirm("Yakin ingin menghapus jabatan ini?")) return;
+
+        try {
+          const res = await fetch(`${API}/${id}`, {
+            method: "DELETE",
+            headers: ADMIN_HEADERS,
+          });
+
+          const data = await res.json();
+          alert(data.message);
+
+          loadJabatan();
+        } catch (err) {
+          console.error(err);
+          alert("Gagal menghapus jabatan");
+        }
       };
 
       searchInput.addEventListener("input", applyFilter);
